examples/valid/program19.c
int main() {
    int i;
    i = 0;
    while (i < 5) {
        i = i + 1;
        if (i == 3) {
            break;
        }
    }
    return i;
}

