examples/invalid/program63.c
int main(void) {
    int x;
    x = 5;
    while (void) {
        x = x + 1;
    }
    return x;
}

